crates/swarm-abm-derive/tests/ui/not_an_enum.rs
use swarm_abm_derive::MultiAgent;

#[derive(MultiAgent)]
struct NotAnEnum {
    x: i32,
}

fn main() {}
